--- a/PhoS/client/home.html
+++ b/PhoS/client/home.html
@@ -1,96 +1,101 @@
 <!DOCTYPE html>
-<html>
-<head> 
-	<script src="js/jquery-1.12.0.min.js"></script>
-    <script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
-	<script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
-  	<meta name="google-signin-client_id" content="914202679537-01rj5h84c37pvq5cvfm2hr9knoue15f4.apps.googleusercontent.com">
-	<link rel="stylesheet" href="stylesheets/fonts.css">
-  	<link rel="stylesheet" href="stylesheets/general.css">
-  	<link rel="stylesheet" href="stylesheets/home.css">
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="google-signin-client_id" content="914202679537-01rj5h84c37pvq5cvfm2hr9knoue15f4.apps.googleusercontent.com">
+    <title>Phobias</title>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-	<div class="background backgroundImage"></div>
-	<div class="background backgroundColor"></div>
-	<div class="headerMenu">
-		<div>
-            <select id="lang" onchange="changeLang(this)">
-                <option value="en" selected>en</option>
-                <option value="ro">ro</option>
-            </select>
-		</div>
-		<p> | </p>
-		<a href="" id="profile">Profile</a>
-		<p> | </p>
-		<a href="login.html" id="signOut" onClick="return onSignOut();">Sign out</a>
-	</div>
-	<div class="logo">
-		<h1 id="logo">PhoS</h1>
-	</div>
-	<div class="leftMenu">
-		<ul>
-			<li id="myPhobias">My Phobias</li>
-			<li id="phobias">Phobias</li>
-		</ul>
-	</div>
-	<div class="activityDropdown">
-		<form>
-			<label>
-			    <select class="activitySelect">
-			        <option id="selectActivity" selected disabled>Select activity</option>
-				 	<option value="volvo">Volvo</option>
-					<option value="saab">Saab</option>
-					<option value="opel">Opel</option>
-					<option value="audi">Audi</option>
-			    </select>
-			</label>
-			<input type="submit" value="OK" class="submitButton"></input>
-		</form>
-	</div>
-<!-- 	<div class="activityDropdown">
-		<form>
-			<div class="selectDiv">
-				<select>
-					<option selected disabled>Activity</option>
-				 	<option value="volvo">Volvo</option>
-					<option value="saab">Saab</option>
-					<option value="opel">Opel</option>
-					<option value="audi">Audi</option>
-				</select>
-			</div>
-			<input type="submit" value="OK" class="submitButton"></input>
-		</form>
-	</div> -->
+    <div class="black-cover"></div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top topnav">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav logo-text" href="home.html">PhoS</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <select class="custom-select language-select" id="lang" onchange="changeLang(this)">
+                            <option value="en" selected>en</option>
+                            <option value="fr">fr</option>
+                        </select>
+                    </li>
+                    <li>
+                        <a href="profile.html" id="profile">Profile</a>
+                    </li>
+                    <li>
+                        <a href="login.html" id="signOut" onClick="return onSignOut();">Sign out</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- Header -->
+    <div class="intro-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-3">
+                    <div class="fobias-list top-margin-50">
+                        <ul>
+                            <li>
+                                <a href="myPhobias.html" id="myPhobias">My Phobias</a>
+                            </li>
+                            <li>
+                                <a href="phobias.html" id="phobias">Phobias</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <div class="top-margin-20">
+                        <form class="form-inline">  
+                          <div class="form-group">
+                            <select class="form-control select-form-control" id="activities-select">
+                              <option class="" id="default-option" selected disabled>Select activity</option>
+                            </select>
+                          </div>
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-primary" onClick="goToSubactivitiesPage()">OK</button>
+                          </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.intro-header -->
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.i18n.properties-1.0.9.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>    
+    <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
+    <script src="js/login.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
-
-<script>
-	function changeLang(lang) {
-	    jQuery.i18n.properties({
-	        name: 'Messages', 
-			path: 'bundle/', 
-			mode: 'both', 
-			language: lang.value, 
-			callback: function() { 
-			$("#myPhobias").text($.i18n.prop('myPhobias'));
-			$("#phobias").text($.i18n.prop('phobias'));
-			$("#profile").text($.i18n.prop('profile'));
-			$("#signOut").text($.i18n.prop('signOut')); 
-			$("#selectActivity").text($.i18n.prop('selectActivity'));  
-			}
-	    });
-	}
-
-	function onSignOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      auth2.signOut().then(function () {
-        console.log('User signed out.');
-      });
-    }
-
-    function onLoad() {
-      gapi.load('auth2', function() {
-        gapi.auth2.init();
-      });
-    }
-</script>
