--- a/userGuide/userGuide.html
+++ b/userGuide/userGuide.html
@@ -56,10 +56,10 @@ div.text {
 <p>PhoS is a phobias application built for every person. The user interface makes the interaction very easy to be made between user and application and also between users.
 </p>
 <p>
-Using PhoS, a user can find out his own phobias, to get useful information about them and make sure that whenever he is planning to do something new, isn't put in danger regarding his phobias. Also, adding his friends in the application, a user can find out how not to put in risk his friends when planning something.	
+Using PhoS, a user can find out his own phobias, to get useful information about them and make sure that whenever he is planning to do something, isn't put in danger regarding his phobias. Also, adding his friends in the application, a user can find out how not to put in risk his friends when planning something.	
 </p>
 <p>
-Being a responsive web application, Phos can be used either on the desktop on any browser, either in smartphones and any kind of environoement, making it easier to be used anywhere.
+Being a responsive web application, Phos can be used either on the desktop on any browser, either in smartphones and any kind of environoement
 </p>
 
 <br>
@@ -67,26 +67,26 @@ Being a responsive web application, Phos can be used either on the desktop on an
 To complete some use cases of the application, please see the following steps
 </p>
 <p>
-An user can start using the application by logging in with his gmail account.
+An user can start using the application by logging in with his Gmail account.
 </p>
 <p>
-After signing in, the user get into the Home page. Also, as a first stept, the user can choose the language of the application. so far he can choose between English and French.
+After signing in, the user get into the Home page. Also, as a first step, the user can choose the language of the application. So far he can choose between English and French.
 </p>
 </div>
 <img class="displayed" src="language.jpg">
 </div>
 <br>
 <div class="text">
-An user can check his profile information by accessing the Profile button from the top right menu. The name, email and the picture, data coming from the Google profile are grouped in General menu item from the left menu. In Friends page, the user can add another users as friends by their Google mail addresses and check the existing friends.
+An user can check his profile information by accessing the Profile button from the top right menu. The name, email and the picture, data coming from the Google profile are grouped in General menu item from the left side. In Friends page, the user can add another users as friends, by their Google mail addresses and check the existing friends.
 </div>
 <br>
 <div>
 <img class="inline" src="profileGeneral.jpg">
-<img class="inline" src="profileFriend.jpg">
+<img class="inline" src="profileFriends.jpg">
 </div>
 <div class="text">
 <p>
-Another information that a user can add to his profile can be filled in About me section from the left menu. On this page can be added data as the gender, if the user has pets, and which type of pets, and whether the user has children or not. He can update all Profile information anytime.
+Another information that a user can add to his profile can be filled in About me section from the left menu. On this page can be added data like gender, if the user has pets, and which type of pets, and whether the user has children or not. He can update all Profile information anytime.
 </p>
 </div>
 <div>
@@ -95,7 +95,7 @@ Another information that a user can add to his profile can be filled in About me
 <br>
 <div class="text">
 <p>
-Going back to the Home page, the Phobias page can be accessed from the left menu. It offers the list of all phobias, each with a description and with picture. Also, the user has the possibility to mark a certain phobia as having that disease, by adding it to his phobia lsit throw the Add button present in the phobia decription.
+Going back to the Home page, the Phobias page can be accessed from the left menu. It offers the list of all phobias, each with a description and with a descriptive picture. Also, the user has the possibility to mark a certain phobia as having that disease, by adding it to his phobia list throw the Add button present in the phobia decription.
 </p>
 </div>
 <img class="displayed" src="phobias.jpg">
